Removed fxFlexFill from main-content in an attempt to fix iOS scrolling and sizing issues + Updated Perfect scrollbar + updated various packages like zone-js & core-js + small tweak on contacts list item padding + removed md2 datepicker color tweak

--- a/src/app/core/scss/partials/_colors.scss
+++ b/src/app/core/scss/partials/_colors.scss
@@ -54,8 +54,7 @@ $matColorHues: 50, 100, 200, 300, 400, 500, 600, 700, 800, 900, A100, A200, A400
         &.secondary-text,
         .secondary-text,
         .mat-icon,
-        .icon,
-        .md2-datepicker-button {
+        .icon {
             color: rgba(0, 0, 0, 0.54);
         }
 
@@ -80,8 +79,7 @@ $matColorHues: 50, 100, 200, 300, 400, 500, 600, 700, 800, 900, A100, A200, A400
     @else {
 
         .mat-icon,
-        .icon,
-        .md2-datepicker-button {
+        .icon {
             color: rgba(255, 255, 255, 1);
         }
 
